--- a/fe/package.json
+++ b/fe/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.2",
     "axios": "^0.20.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
