--- a/fe/package.json
+++ b/fe/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll",
     "eject": "react-scripts eject",
     "test:coverage":"react-scripts test --coverage --watchAll"
   },
